tests/invalid/try_bad_params.err_exp
try_bad_params.m:008: Error: no clauses for predicate `main'/2.
try_bad_params.m:020: Duplicate io try parameter.
try_bad_params.m:026: Error: no clauses for predicate `main_2'/2.
try_bad_params.m:029: Error: invalid try goal parameter `bloop'.
try_bad_params.m:040: In clause for predicate `main_3'/2:
try_bad_params.m:040:   in argument 2 of call to predicate
try_bad_params.m:040:   `exception.rethrow'/1:
try_bad_params.m:040:   type error: variable `STATE_VARIABLE_Int' has type
try_bad_params.m:040:   `int',
try_bad_params.m:040:   expected type was `io.state'.
try_bad_params.m:040: In clause for predicate `main_3'/2:
try_bad_params.m:040:   in argument 2 of call to predicate
try_bad_params.m:040:   `exception.rethrow'/1:
try_bad_params.m:040:   type error: variable `STATE_VARIABLE_Int_0' has type
try_bad_params.m:040:   `int',
try_bad_params.m:040:   expected type was `io.state'.
try_bad_params.m:044: Error: no clauses for predicate `main_4'/1.
try_bad_params.m:047: Error: the argument of io should be a state variable.
try_bad_params.m:053: Error: no clauses for predicate `main_5'/2.
try_bad_params.m:056: Error: io takes exactly one argument, which should be a
try_bad_params.m:056:   state variable name.
For more information, recompile with `-E'.
